# mycat-meme

./: .gitignore  README.md  pyproject.toml
docs/: index.html
notes/: dreamina-image2image-probe.md
src/mycat_meme/: __init__.py  __main__.py  cli.py  dreamina.py  errors.py  gif.py  gif_pipeline.py  pipeline.py  prompts.py  ratio.py
tests/: conftest.py  test_cli.py  test_dreamina.py  test_gif.py  test_gif_pipeline.py  test_pipeline.py  test_prompts.py  test_ratio.py
